--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     
                     <!-- Write code for the right section here -->
                     <h3>ABOUT ME</h3>
-                    <h3>Edcation</h3>
-                    <h3>Experiance</h3>
+                    <h3>Education</h3>
+                    <h3>Experience</h3>
                 </div>
             </section>
         </main>
