--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="profile">
 <img  src="2857.jpg" height="100px" width="100px" >
              <!-- Write code for left section--> 
-             <h2 class="Name">Shubham Yadav</h2>
+             <h2 class="name">Shubham Yadav</h2>
              <h3 class="designation">Frontend-Developer</h3>
              <h3 class="description">Description</h3>
             </div>
