--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
              <h3 class="description">Description</h3>
             </div>
             <div class="icon" ></div>
-            <img src="LinDin.png"  alt="linkedin" height="25px" width="25px" onclick="ABC">
+            <img src="linkedin.png"  alt="linkedin" height="25px" width="25px" onclick="ABC">
             <img src="git.png" alt="github" height="25px" width="25px" onclick="">
             <img src="phone.png" alt="phone" height="25px" width="25px" onclick="8787270679">
-            <img src="location.jpg" alt="location" height="25px" width="25px" onclick="">
+            <img src="location.png" alt="location" height="25px" width="25px" onclick="">
 
                  </div>
                  <div class="skills">SKILLS</div>
