--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 <img  src="2857.jpg" height="100px" width="100px" >
              <!-- Write code for left section--> 
              <h2 class="name">Shubham Yadav</h2>
-             <h3 class="designation">Frontend-Developer</h3>
-             <h3 class="description">Description</h3>
+             <h4 class="designation">Frontend-Developer</h4>
+             <hr>
+             <p class="description">Description</p>
             </div>
             <div class="icon" ></div>
             <img src="linkedin.png"  alt="linkedin" height="25px" width="25px" onclick="ABC">
@@ -56,8 +57,11 @@
                     
                     <!-- Write code for the right section here -->
                     <h3>ABOUT ME</h3>
+                    <p class="about" ></p>
                     <h3>Education</h3>
+                    <p class="education"></p>
                     <h3>Experience</h3>
+                    <p class="experience"></p>
                 </div>
             </section>
         </main>
